# duckIRC

./: Cargo.toml  README.md
src/: app.rs  click_state.rs  irc.rs  keyboard_handlers.rs  main.rs  mouse_handlers.rs  servers.rs  ui.rs
