[package]
name = "duckIRC"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
irc = "1.1.0"
ratatui = "0.30.0"
color-eyre = "0.6.5"
crossterm = "0.29"
anyhow = "1.0.100"
serde = { version = "1", features = ["derive"] }
futures-util = "0.3.31"
gapbuf = "0.1.4"
toml = "0.9.11+spec-1.1.0"
tracing = "0.1.44"
wl-clipboard-rs = "0.9"
dirs = "6.0.0"
